# quickshell

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  CONVENTION.md  INSTRUCTION.md  LICENSE  MEMORY.md  NEXT-STEP.md  README.md
.obsidian/: appearance.json  graph.json  hotkeys.json  workspace.json
.obsidian/plugins/obsidian-style-settings/: data.json
SUGGESTION/: PROBLEMS.md  README.md  SOLUTIONS.md  SUGGESTIONS.md
ai/: CONTEXT.md  INSTRUCTION.md  MEMORY.md
quickshell/: CMakeLists.txt  README.md  STATECHART.md  config.json  main.cpp  qmldir  shell.qml
quickshell/services/: README.md
quickshell/services/ipc/: BackendSocket.qml  README.md
quickshell/services/system/: NetworkManager.qml  PowerManager.qml  README.md
quickshell/state/: README.md  StateRegistry.qml
quickshell/state/content/: BatteryContent.qml  BrightnessContent.qml  CallContent.qml  MeetingContent.qml  NetworkContent.qml  NotificationContent.qml  README.md  SearchContent.qml  TimerContent.qml  VolumeContent.qml  WorkspaceContent.qml
quickshell/state/machines/: CompactState.qml  ExpandedState.qml  MinimalState.qml  README.md
quickshell/state/projections/: README.md
quickshell/state/projections/battery/: BatteryCompact.qml  BatteryExpanded.qml  BatteryMinimal.qml
quickshell/state/projections/brightness/: BrightnessCompact.qml  BrightnessExpanded.qml
quickshell/state/projections/call/: CallCompact.qml  CallMinimal.qml  callCompact.qml  callMinimal.qml
quickshell/state/projections/meeting/: MeetingCompact.qml  MeetingMinimal.qml  meetingCompact.qml  meetingMinimal.qml
quickshell/state/projections/network/: NetworkCompact.qml  NetworkExpanded.qml  NetworkMinimal.qml
quickshell/state/projections/notification/: NotificationCompact.qml  NotificationExpanded.qml  NotificationMinimal.qml  notiCompact.qml  notiExpanded.qml  notiMinimal.qml
quickshell/state/projections/search/: SearchCompact.qml  SearchExpanded.qml  searchCompact.qml  searchExpanded.qml
quickshell/state/projections/timer/: TimerCompact.qml  TimerExpanded.qml  TimerMinimal.qml
quickshell/state/projections/volume/: VolumeCompact.qml  VolumeExpanded.qml
quickshell/state/projections/workspace/: WorkspaceMinimal.qml  workspaceMinimal.qml
quickshell/state/stores/: AnimationStore.qml  README.md  SessionStore.qml  ThemeStore.qml
quickshell/ui/: README.md
quickshell/ui/common/: Card.qml  IconButton.qml
quickshell/utils/: Formatters.js  README.md  Validators.js
state/: STATECHART.md
